Fix #5 - remove number of papers

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div><!-- /.container -->
     </section>
 
-    <section id="facts" class="section bg-image-1 facts text-center">
+    <!--section id="facts" class="section bg-image-1 facts text-center">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
@@ -166,9 +166,9 @@
                     <h3>02<br>Speakers</h3>
                 
                 </div>
-            </div><!-- row -->
-        </div><!-- container -->
-    </section>
+            </div>
+        </div>
+    </section -->
 
 	<!--section id="committees" class="section committees">
         <div class="container">
