--- a/cfp.html
+++ b/cfp.html
@@ -43,7 +43,7 @@
 
                     <!-- navigation menu -->
 
-                    <li><a data-scroll href="index.html#about">About</a></li>
+                    <li><a href="index.html#about">About</a></li>
                     <li><a href="./authors.html#committees">Committees</a></li>
                     <li><a href="./authors.html#authors">Authors</a></li>
                     <li><a href="./index.html#dates">Dates</a></li>
