--- a/cfs.html
+++ b/cfs.html
@@ -42,7 +42,7 @@
                 <ul class="nav navbar-nav navbar-right">
 
                     <!-- navigation menu -->
-                    <li><a data-scroll href="./index.html#about">About</a></li>
+                    <li><a href="./index.html#about">About</a></li>
                     <li><a href="./authors.html#committees">Committees</a></li>
                     <li><a href="./authors.html#authors">Authors</a></li>
                     <li><a href="./index.html#dates">Dates</a></li>
