Fix #8 update call for papers and cfs

--- a/cfp.html
+++ b/cfp.html
@@ -75,40 +75,54 @@
                 <div class="row">
                     <div class="col-md-12">
                         <p>
-                        PhD and MsC students working in any area of Informatics Engineering are invited to
-                        present their scientific works to discuss their ideas and obtain a relevant feedback and
-                        profitable expert opinions from peers, professors and experienced researchers.
-                        Authors should submit a paper in English, carefully checked for correct grammar and
-                        spelling, addressing one of the conference topics. Each paper should clearly indicate the
-                        nature of its technical/scientific contribution, and the problems, domains or
-                        environments in which it is applicable.
-                        Papers must be formatted according to the Springer LNCS Template , with a length
-                        between 10 and 12 pages (including figures and references) and should report on
-                        substantial research supported by measurable results.
-                        </p>
-                        <p>
-                        All proposed papers must be submitted electronically (in PDF format) using the Paper
-                        Submission Page (EasyChair system). At least one author for each accepted paper must
-                        register to ensure that the paper will be included in the conference proceeding. We
-                        would recommend that you respect the page limit and do not submit more than one
-                        paper per event.
-                        All papers will be single-blind reviewed by the scientific committee members with the
-                        aim to provide detailed and constructive feedback. All reviewers recommendations must
-                        be addressed by the authors before they submit the final version.
-                        Scientific contributions will be evaluated in terms of the following criteria:
+                        Our world is evolving and accelerating under the impetus of new technologies and digital
+technology. If the actors of this innovation are multiple, the researchers are distinguished
+by their disruptive state of mind and their agility to imagine new digital solutions. Through
+an overlap in their interests, researchers and industrial actors are now working hand-in-
+hand to create the tools and services that make the world smoother, safer and more
+sustainable.
+Several topics are concerned by such evolution. Being organized since 2005, the Doctoral
+Symposium in Informatics Engineering (DSIE) welcomes, each year, Ph.D and MSc
+students to participate and take advantage of this opportunity to exchange ideas and to
+share their R&amp;D findings/experiences. The goal is to bring together a broad and diverse
+computer science students whose ideas and research in computer science are of mutual
+interest. 
+</p>
+<p>
+The Doctoral Symposium In Informatics Engineering (DSIE) is the annual flagship
+conference that takes place at FEUP on January 30-31, 2018. DSIE welcomes articles in
+the field of computer science dealing with new developments in theory, analytical,
+experimentation, demonstration, advanced deployment and case studies, results of
+laboratory or field operational tests.
+In the actual Industrial Revolution, we are facing a range of new technologies that gather
+the physical, digital and biological spheres. Our daily life, economy and industries will be
+impacted by these new technologies which also challenge our research. The objective of
+this DSIE is to add valuable scientific contributions. The main topics of interest to DSIE&#39;18
+include, but are not limited to, the following topics:
                         </p>
                         <ul>
-                            <li>Relevance</li>
-                            <li>Originality</li>
-                            <li>Quality (including technical content and accuracy)</li>
-                            <li>Significance of the work</li>
-                            <li>Presentation (organization, style and clearness)</li>
-                            <li>Appropriateness of references to papers presented in earlier editions of the event</li>
+                            <li>Advanced Information Extraction</li>
+							<li>Bioinformatics</li>
+							<li>Computer Vision</li>
+							<li>Distributed Computing</li>
+							<li>Gamification &amp; Serious Games</li>
+							<li>Information Systems</li>
+							<li>Information and Communication Technology</li>
+							<li>Internet of Things</li>
+							<li>Machine Learning</li>
+							<li>Multi-agents Systems</li>
+							<li>Software Engineering</li>
+							<li>Systems Security and Cryptocurrency</li>
+							<li>Computer Graphics and Virtual Environments</li>
                         </ul>
-                       
-                        Authors of accepted papers will have 15 minutes to present their scientific contribution
-                        during the Presentation Sessions, followed by approximately 5 minutes of discussion. 
+                       Each paper, in PDF format and written in English, must be formatted according to the
+official <a href="http://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank"><b>Springer LNCS template</b></a>, not exceed 12 pages, including figures and references.
+All proposed papers must be electronically submitted <a href="https://easychair.org/conferences/?conf=dsie2018" target="_blank"><b>here</b></a>.
+To ensure that the scientific contribution is published in the Proceedings, at least one
+author for each accepted paper must be fully registered and the paper must comply with
+the suggested layout and page limit.
                         </p>
+						<p><a href="documentation/13th-doctoral-symposium.pdf" target="_blank"><b>Download Call For Papers</b></a></p>
                     </div>
                 </div>
             </div>
@@ -125,7 +139,7 @@
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Paper <br>Submission Due</div>
-                                <div class="panel-body text-center"> <h3>11<br> December <br> 2017</h3></div>
+                                <div class="panel-body text-center"> <h3>15<br> December <br> 2017</h3></div>
                             </div>
                         </div>
                         <div class="col-md-2">
@@ -143,7 +157,7 @@
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Authors<br>Notification</div>
-                                <div class="panel-body text-center"> <h3>15 <br>January <br> 2018</h3></div>
+                                <div class="panel-body text-center"> <h3>15-19<br>January <br> 2018</h3></div>
                             </div>
                         </div>
                         
