--- a/cfs.html
+++ b/cfs.html
@@ -73,7 +73,18 @@
     
                 <div class="row">
                     <div class="col-md-12">
-                      
+                      <p>
+					  You are invited to support the Doctoral Symposium in Informatics Engineering 2018 (DSIE'18), organized by 
+					  the Doctoral Program in Informatics Engineering (ProDEI) at Faculty of Engineering of the University of Porto (FEUP).
+					  </p>
+					  <p>
+					  This is an ideal way to demonstrate your organization's commitment to the academic world, the corporate support is 
+					  typically used to allow a greater number of students to attend DSIE’18. Your support is very important to the symposium, 
+					  and the organization committee ensures that these contributions are well recognized. 
+					  <p>
+					  </p>
+					  If you are interested in sponsor this event please contact us at <a href="mailto:dsie2018@fe.up.pt?Subject=SponsorDSIE2018" target="_top">dsie2018@fe.up.pt</a>
+					  </p>
                     </div>
                 </div>
             </div>
