--- a/venue.html
+++ b/venue.html
@@ -112,7 +112,7 @@
 						   Rua Dr. Roberto Frias<br> 
 						   4200-465 Porto, Portugal<br><br> 
 						   Phone: +351 225 081 400<br> 
-						   Email: dsie2018@fe.up.pt</p>
+						   Email: <a href="mailto:dsie2018@fe.up.pt?Subject=DSIE2018" target="_top">dsie2018@fe.up.pt</a></p>
                     </address>
                 </div>
                 <div class="col-sm-9">
