--- a/cfp.html
+++ b/cfp.html
@@ -117,7 +117,7 @@ include, but are not limited to, the following topics:
                         </ul>
                        Each paper, in PDF format and written in English, must be formatted according to the
 official <a href="http://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines" target="_blank"><b>Springer LNCS template</b></a>, not exceed 12 pages, including figures and references.
-All proposed papers must be electronically submitted <a href="https://easychair.org/conferences/?conf=dsie2018" target="_blank"><b>here</b></a>.
+All proposed papers must be electronically submitted <a href="https://easychair.org/cfp/DSIE2018" target="_blank"><b>here</b></a>.
 To ensure that the scientific contribution is published in the Proceedings, at least one
 author for each accepted paper must be fully registered and the paper must comply with
 the suggested layout and page limit.
