Fix #12 - remove authors
authors information not ready yet

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <!-- navigation menu -->
                     <li class="active"><a data-scroll href="#about">About</a></li>
                     <li><a href="./authors.html#committees">Committees</a></li>
-                    <li><a href="./authors.html#authors">Authors</a></li>
+                    <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="#dates">Dates</a></li>
                     <li><a href="./cfp.html"> Call for Papers</a></li>
                     <li><a href="./cfs.html"> Call for Sponsors</a></li>
