--- a/authors.html
+++ b/authors.html
@@ -44,7 +44,7 @@
                     <!-- navigation menu -->
                     <li><a href="./index.html#about">About</a></li>
                     <li><a href="./authors.html#committees">Committees</a></li>
-                    <li><a class="active" href="./authors.html#authors">Authors</a></li>
+                    <!--li><a class="active" href="./authors.html#authors">Authors</a></li-->
                     <li><a href="./index.html#dates">Dates</a></li>
                     <li><a href="./cfp.html">Call for Papers</a></li>
                     <li><a href="./cfs.html">Call for Sponsors</a></li>
@@ -101,7 +101,7 @@
     </div>
 </section>	
 
-<section id="authors" class="section authors">
+<!--section id="authors" class="section authors">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
@@ -171,7 +171,7 @@
            
         </div>
     </div>
-</section>	
+</section-->	
 
     <footer class="site-footer">
         <div class="container">
