--- a/cfp.html
+++ b/cfp.html
@@ -45,7 +45,7 @@
 
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="./authors.html#committees">Committees</a></li>
-                    <li><a href="./authors.html#authors">Authors</a></li>
+                    <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="./index.html#dates">Dates</a></li>
                     <li><a class="active" href="./cfp.html">Call for Papers</a></li>
                     <li><a href="./cfs.html">Call for Sponsors</a></li>
