--- a/venue.html
+++ b/venue.html
@@ -44,7 +44,7 @@
                     <!-- navigation menu -->
                     <li class="active"><a href="./index.html#about">About</a></li>
                     <li><a href="./authors.html#committees">Committees</a></li>
-                    <li><a href="./authors.html#authors">Authors</a></li>
+                    <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="./index.html#dates">Dates</a></li>
                     <li><a href="./cfp.html">Call for Papers</a></li>
                     <li><a href="./cfs.html">Call for Sponsors</a></li>
