--- a/index.html
+++ b/index.html
@@ -203,13 +203,13 @@
                     <div class="col-md-2">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">Paper <br>Submission Due</div>
-                            <div class="panel-body text-center"> <h3>18<br> December <br> 2017</h3></div>
+                            <div class="panel-body text-center"> <h3><strike>18</strike> <br>28<br> December <br> 2017</h3></div>
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">Posters/Short Paper<br>Submission Due</div>
-                            <div class="panel-body text-center"> <h3>18<br> December <br> 2017</h3></div>
+                            <div class="panel-body text-center"> <h3><strike>18</strike> <br>28<br> December <br> 2017</h3></div>
                         </div>
                     </div>
                     <div class="col-md-2">
