Fix #16 cfp 3 january

--- a/cfp.html
+++ b/cfp.html
@@ -158,13 +158,17 @@ include, but are not limited to, the following topics:
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Paper <br>Submission Due</div>
-                                <div class="panel-body text-center"> <h3><strike>18</strike> <br>28<br> December <br> 2017</h3></div>
+                                <div class="panel-body text-center"> <h3><strike>18/12/2017</strike> <br>
+								                                         <strike>28/12/2017</strike> <br>
+								                                         03<br> January <br> 2018</h3></div>
                             </div>
                         </div>
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Posters/Short Paper<br>Submission Due</div>
-                                <div class="panel-body text-center"> <h3><strike>18</strike> <br>28<br> December <br> 2017</h3></div>
+                                <div class="panel-body text-center"> <h3><strike>18/12/2017</strike> <br>
+								                                          <strike>28/12/2017</strike> <br>
+								                                         03<br> January <br> 2018</h3></div>
                             </div>
                         </div>
                         <div class="col-md-2">
