--- a/index.html
+++ b/index.html
@@ -200,18 +200,22 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="col-md-2">
-                        <div class="panel panel-default">
-                            <div class="panel-heading text-center">Paper <br>Submission Due</div>
-                            <div class="panel-body text-center"> <h3><strike>18</strike> <br>28<br> December <br> 2017</h3></div>
-                        </div>
-                    </div>
-                    <div class="col-md-2">
-                        <div class="panel panel-default">
-                            <div class="panel-heading text-center">Posters/Short Paper<br>Submission Due</div>
-                            <div class="panel-body text-center"> <h3><strike>18</strike> <br>28<br> December <br> 2017</h3></div>
-                        </div>
-                    </div>
+					<div class="col-md-2">
+						<div class="panel panel-default">
+							<div class="panel-heading text-center">Paper <br>Submission Due</div>
+							<div class="panel-body text-center"> <h3><strike>18/12/2017</strike> <br>
+																	 <strike>28/12/2017</strike> <br>
+																	 03<br> January <br> 2018</h3></div>
+						</div>
+					</div>
+					<div class="col-md-2">
+						<div class="panel panel-default">
+							<div class="panel-heading text-center">Posters/Short Paper<br>Submission Due</div>
+							<div class="panel-body text-center"> <h3><strike>18/12/2017</strike> <br>
+																	  <strike>28/12/2017</strike> <br>
+																	 03<br> January <br> 2018</h3></div>
+						</div>
+					</div>
                     <div class="col-md-2">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">Registration<br> Opening</div>
