Req #17 update registration

--- a/cfp.html
+++ b/cfp.html
@@ -174,7 +174,8 @@ include, but are not limited to, the following topics:
                         <div class="col-md-2">
                             <div class="panel panel-default">
                                 <div class="panel-heading text-center">Registration<br> Opening</div>
-                                <div class="panel-body text-center"> <h3>28<br> December <br> 2017</h3></div>
+								<div class="panel-body text-center"> <h3><strike>28/12/2017</strike> <br>
+																	 13<br> January <br> 2018</h3></div>
                             </div>
                         </div>
                         <div class="col-md-2">
