--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             
             <a class="btn btn-white btn-lg" data-scroll href="#about">learn more</a><br><br>
-            <a class="btn btn-white btn-lg" href="./cfp.html">Call for Papers</a>
+            <a class="btn btn-white btn-lg" href="https://tinyurl.com/dsie18" target="_blank">Registration</a>
             <a class="btn btn-white btn-lg" href="./cfs.html">Call for Sponsors</a>
         </div>
     </header>
@@ -219,7 +219,8 @@
                     <div class="col-md-2">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">Registration<br> Opening</div>
-                            <div class="panel-body text-center"> <h3>28<br> December <br> 2017</h3></div>
+                            <div class="panel-body text-center"> <h3><strike>28/12/2017</strike> <br>
+																	 13<br> January <br> 2018</h3></div>
                         </div>
                     </div>
                     <div class="col-md-2">
