Req  #19 update sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -47,13 +47,10 @@
                     <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="./index.html#dates">Dates</a></li>
                     <li><a href="./cfp.html">Call for Papers</a></li>
-                    <li><a class="active" href="./cfs.html">Call for Sponsors</a></li>
-					<li><a href="./sponsors.html">Sponsors</a></li>
+					<li><a class="active" href="./sponsors.html">Sponsors</a></li>
 					<!--
-					<li><a data-scroll href="#call-for-papers">Call for papers</a></li>
                     <li><a data-scroll href="#speakers">Speakers</a></li>              
-                    <li><a data-scroll href="#schedule">Schedule</a></li>                  
-                    <li><a data-scroll href="#sponsors">Sponsors</a></li>
+                    <li><a data-scroll href="#schedule">Schedule</a></li>
                     <li><a data-scroll href="#dates">Dates</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li-->
                     <li><a href="./venue.html">Venue</a></li> 
@@ -68,24 +65,25 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-title">Call for Sponsors</h3>              
+                        <h3 class="section-title">Partners</h3>              
                     </div>
                 </div>
     
                 <div class="row">
-                    <div class="col-md-12">
-                      <p>
-					  You are invited to support the Doctoral Symposium in Informatics Engineering 2018 (DSIE'18), organized by 
-					  the Doctoral Program in Informatics Engineering (ProDEI) at Faculty of Engineering of the University of Porto (FEUP).
-					  </p>
-					  <p>
-					  This is an ideal way to demonstrate your organization's commitment to the academic world, the corporate support is 
-					  typically used to allow a greater number of students to attend DSIE’18. Your support is very important to the symposium, 
-					  and the organization committee ensures that these contributions are well recognized. 
-					  <p>
-					  </p>
-					  If you are interested in sponsor this event please contact us at <a href="mailto:dsie2018@fe.up.pt?Subject=SponsorDSIE2018" target="_top">dsie2018@fe.up.pt</a>
-					  </p>
+                    <div class="col-md-4">
+						<a href="https://sigarra.up.pt/feup/en/web_page.Inicial" target="_blank">
+							<img src="assets/images/partner/feup2.png" alt="feup">
+						</a>
+                    </div>
+					<div class="col-md-4">
+						<a href="https://sigarra.up.pt/up/pt/web_base.gera_pagina?p_pagina=home" target="_blank">
+							<img src="assets/images/partner/up.png" alt="up">
+						</a>
+                    </div>
+					<div class="col-md-4">
+						<a href="hhttps://sigarra.up.pt/feup/en/UNI_GERAL.UNIDADE_VIEW?pv_unidade=151" target="_blank">
+							<img src="assets/images/partner/dei.png" alt="dei">
+						</a>
                     </div>
                 </div>
             </div>
