--- a/index.html
+++ b/index.html
@@ -47,13 +47,11 @@
                     <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="#dates">Dates</a></li>
                     <li><a href="./cfp.html"> Call for Papers</a></li>
-                    <li><a href="./cfs.html"> Call for Sponsors</a></li>
+                    <!--li><a href="./cfs.html"> Call for Sponsors</a></li-->
+					<li><a href="./sponsors.html">Sponsors</a></li>
 					<!--
-					
                     <li><a data-scroll href="#speakers">Speakers</a></li>              
-                    <li><a data-scroll href="#schedule">Schedule</a></li>                  
-                    <li><a data-scroll href="#sponsors">Sponsors</a></li>
-                    
+                    <li><a data-scroll href="#schedule">Schedule</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li-->
                     <li><a href="./venue.html">Venue</a></li>
                     <li><a href="https://paginas.fe.up.pt/~prodei/dsie17/" target="_blank">Previous Edition</a></li>              
