--- a/venue.html
+++ b/venue.html
@@ -46,8 +46,9 @@
                     <li><a href="./authors.html#committees">Committees</a></li>
                     <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="./index.html#dates">Dates</a></li>
-                    <li><a href="./cfp.html">Call for Papers</a></li>
-                    <li><a href="./cfs.html">Call for Sponsors</a></li>
+                    <li><a href="./cfp.html">Call for Papers</a></li>                    
+					<!--li><a href="./cfs.html"> Call for Sponsors</a></li-->
+					<li><a href="./sponsors.html">Sponsors</a></li>
 					<!--li><a data-scroll href="#committees">Committees</a></li>
 					<li><a data-scroll href="#authors">Authors</a></li>
 					<li><a data-scroll href="#call-for-papers">Call for papers</a></li>
