--- a/cfs.html
+++ b/cfs.html
@@ -47,13 +47,11 @@
                     <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="./index.html#dates">Dates</a></li>
                     <li><a href="./cfp.html">Call for Papers</a></li>
-                    <li><a class="active" href="./cfs.html">Call for Sponsors</a></li>
+                    <li><a class="active" href="./cfs.html">Call for Sponsors</a></li>					
+					<li><a href="./schedule.html">Schedule</a></li>
 					<li><a href="./sponsors.html">Sponsors</a></li>
 					<!--
-					<li><a data-scroll href="#call-for-papers">Call for papers</a></li>
-                    <li><a data-scroll href="#speakers">Speakers</a></li>              
-                    <li><a data-scroll href="#schedule">Schedule</a></li>                  
-                    <li><a data-scroll href="#sponsors">Sponsors</a></li>
+                    <li><a data-scroll href="#speakers">Speakers</a></li>
                     <li><a data-scroll href="#dates">Dates</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li-->
                     <li><a href="./venue.html">Venue</a></li> 
