--- a/sponsors.html
+++ b/sponsors.html
@@ -46,11 +46,11 @@
                     <li><a href="./authors.html#committees">Committees</a></li>
                     <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="./index.html#dates">Dates</a></li>
-                    <li><a href="./cfp.html">Call for Papers</a></li>
+                    <li><a href="./cfp.html">Call for Papers</a></li>					
+					<li><a href="./schedule.html">Schedule</a></li>
 					<li><a class="active" href="./sponsors.html">Sponsors</a></li>
 					<!--
-                    <li><a data-scroll href="#speakers">Speakers</a></li>              
-                    <li><a data-scroll href="#schedule">Schedule</a></li>
+                    <li><a data-scroll href="#speakers">Speakers</a></li>
                     <li><a data-scroll href="#dates">Dates</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li-->
                     <li><a href="./venue.html">Venue</a></li> 
