--- a/index.html
+++ b/index.html
@@ -216,22 +216,24 @@
 					</div>
                     <div class="col-md-2">
                         <div class="panel panel-default">
-                            <div class="panel-heading text-center">Registration<br> Opening</div>
-                            <div class="panel-body text-center"> <h3><strike>28/12/2017</strike> <br>
-																	 13<br> January <br> 2018</h3></div>
+                            <div class="panel-heading text-center">Registration<br> Closed</div>
+                            <div class="panel-body text-center"> <h3><strike>13/01/2018</strike> <br>
+																	 25<br> January <br> 2018</h3></div>
                         </div>
                     </div>
                     <div class="col-md-2">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">Authors<br>Notification</div>
-                            <div class="panel-body text-center"> <h3>15<br>January <br> 2018</h3></div>
+                            <div class="panel-body text-center"> <h3><strike>15/01/2018</strike> <br>
+																	25<br>January <br> 2018</h3></div>
                         </div>
                     </div>
                    
                     <div class="col-md-2">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">Camera-Ready<br>Due</div>
-                            <div class="panel-body text-center"> <h3>22<br> January <br> 2018</h3></div>
+                            <div class="panel-body text-center"> <h3><strike>22/01/2018</strike> <br>
+																	25<br> January <br> 2018</h3></div>
                         </div>
                     </div>
                    
