Req #21 update committees

--- a/authors.html
+++ b/authors.html
@@ -85,15 +85,45 @@
             <div class="col-md-4">
                 <h4>Junior Scientific Committee</h4><br>
                 <ul>
-                    <li>ProDEI Students</li>
-                    <li>MAPi Students</li>
+					<li>André Santos</li>
+					<li>António Guerra</li>
+					<li>Arnaldo Pereira</li>
+					<li>Bruno Tavares</li>
+					<li>Carla Abreu</li>
+					<li>Joana Patrícia Bordonhos Ribeiro</li>
+					<li>João Costa</li>
+					<li>João Figueira Silva</li>
+					<li>João Neto</li>
+					<li>João Pedro Dias</li>
+					<li>José Ornelas</li>
+					<li>Kemilly</li>
+					<li>Marcelo Santos</li>
+					<li>Marisa Reis</li>
+					<li>Mohamed Yassine Zarouk</li>
+					<li>Ricardo Macedo</li>
+					<li>Saulo Carpio</li>
+					<li>Simão Reis</li>
+					<li>Tiago Neto</li>
+					<li>Vitor Enes</li>
+					<li>Yassine Baghoussi</li>
                 </ul>
             </div>
     
             <div class="col-md-4">
                 <h4>Senior Scientific Committee</h4><br>
                 <ul>
-                    <li>To Be Announced</li>
+					<li>Ana Paiva</li>
+					<li>Bruno Lima</li>
+					<li>Filipe Correia</li>
+					<li>Henrique Lopes Cardoso</li>
+					<li>Hugo Sereno Ferreira</li>
+					<li>João José Pinto Ferreira</li>
+					<li>João Mendes Moreira</li>
+					<li>João Pascoal Faria</li>
+					<li>Leonel Dias</li>
+					<li>Rosaldo Rossetti</li>
+					<li>Rui Maranhão</li>
+					<li>Sérgio Nunes</li>
                 </ul>
             </div>
         </div>
