Req #19 update sponsors

--- a/index.html
+++ b/index.html
@@ -247,6 +247,42 @@
                 </div>
             </div>
     </section>
+	
+    <section id="sponsors" class="section sponsors">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="section-title">Partners</h3>              
+                    </div>
+                </div>
+    
+                <div class="row">
+                    <div class="col-md-6">
+						<a href="https://sigarra.up.pt/feup/en/web_page.Inicial" target="_blank">
+							<img src="assets/images/partner/feup.png" alt="feup">
+						</a>
+                    </div>
+					<div class="col-md-6">
+						<a href="https://sigarra.up.pt/feup/en/UNI_GERAL.UNIDADE_VIEW?pv_unidade=151" target="_blank">
+							<img src="assets/images/partner/dei.png" alt="dei">
+						</a>
+                    </div>
+				</div>
+    
+                <div class="row"><div class="col-md-6">
+						<a href="https://sigarra.up.pt/up/pt/web_base.gera_pagina?p_pagina=home" target="_blank">
+							<img src="assets/images/partner/up.png" alt="up">
+						</a>
+                    </div>
+					<div class="col-md-6">
+						<a href="https://www.aefeup.pt/" target="_blank">
+							<img src="assets/images/partner/aefeup.png" alt="dei">
+						</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+	
 <!--
     <section id="photos" class="section photos">
         <div class="container">
