--- a/schedule.html
+++ b/schedule.html
@@ -65,45 +65,54 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-title">30th Jan - Tuesday</h3>  
-                        <h4 class="section-title">Track A (B032)</h4>               
+                        <h3 class="section-title">30th Jan - Tuesday</h3>           
                     </div>
                 </div>
 				<!-- 30 Morning -->
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">8:30 - 9:00</div>
                             <div class="panel-body text-center"> <h3>Registration</h3></div>
                         </div>
-                    </div>
-					<div class="col-md-4">
+                    </div>					
+                </div>
+                <div class="row">
+					<div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">9:00 - 9:30</div>
                             <div class="panel-body text-center"> <h3>Opening</h3></div>
                         </div>
-                    </div>
-					<div class="col-md-4">
+                    </div>					
+                </div>
+                <div class="row">
+					<div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">9:30 - 11:00</div>
-                            <div class="panel-body text-center"> <h3>Invited Speaker</h3></div>
+                            <div class="panel-body text-center"> <h3>Invited Speaker</h3></div>  
+							<h4 class="panel-body text-center">Track A (B032)</h4>    
                         </div>
                     </div>
 				</div>	
 				<div class="row">	
-					<div class="col-md-4">
+					<div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">11:00 - 12:00</div>
                             <div class="panel-body text-center"> <h3>Coffee Break</h3></div>
                         </div>
-                    </div>
-					<div class="col-md-4">
+                    </div>					
+                </div>
+                <div class="row">
+					<div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">12:00 - 13:00</div>
-                            <div class="panel-body text-center"> <h3>Session 1</h3></div>
+                            <div class="panel-body text-center"> <h3>Session 1</h3></div>  
+							<h4 class="panel-body text-center">Track A (B032)</h4>    
                         </div>
-                    </div>
-					<div class="col-md-4">
+                    </div>					
+                </div>
+                <div class="row">
+					<div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">13:00 - 14:30</div>
                             <div class="panel-body text-center"> <h3>Lunch</h3></div>
@@ -112,22 +121,28 @@
                 </div>
 				<!-- 30 Afternoon -->
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">14:30 - 16:00</div>
-                            <div class="panel-body text-center"> <h3>Session 2</h3></div>
+                            <div class="panel-body text-center"> <h3>Session 2</h3></div>  
+							<h4 class="panel-body text-center">Track A (B032)</h4>    
                         </div>
-                    </div>
-					<div class="col-md-4">
+                    </div>					
+                </div>
+                <div class="row">
+					<div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">16:00 - 17:00</div>
                             <div class="panel-body text-center"> <h3>Coffee Break</h3></div>
                         </div>
-                    </div>
-					<div class="col-md-4">
+                    </div>					
+                </div>
+                <div class="row">
+					<div class="col-md-12">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center">17:00 - 19:30</div>
-                            <div class="panel-body text-center"> <h3>Session 3</h3></div>
+                            <div class="panel-body text-center"> <h3>Session 3</h3></div>  
+							<h4 class="panel-body text-center">Track A (B032)</h4>    
                         </div>
                     </div>
                 </div>				
@@ -135,7 +150,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h3 class="section-title">31th Jan - Wednesday</h3> 
-						<h4 class="section-title">Track A (B032)</h4> 						
+						<h4 class="panel-body text-center">Track A (B032)</h4> 						
                     </div>
                 </div>
 				<!-- 31 Morning -->
