Req #19 update sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -89,7 +89,7 @@
                     </div>
 					<div class="col-md-6">
 						<a href="https://www.aefeup.pt/" target="_blank">
-							<img src="assets/images/partner/aefeup.png" alt="dei">
+							<img src="assets/images/partner/aefeup.png" alt="aefeup">
 						</a>
                     </div>
                 </div>
