Req #22 update speakers

--- a/speakers.html
+++ b/speakers.html
@@ -46,11 +46,10 @@
                     <li><a href="./authors.html#committees">Committees</a></li>
                     <!--li><a href="./authors.html#authors">Authors</a></li-->
                     <li><a href="./index.html#dates">Dates</a></li>
-                    <li><a href="./cfp.html">Call for Papers</a></li>
-                    <li><a class="active" href="./cfs.html">Call for Sponsors</a></li>					
+                    <li><a href="./cfp.html">Call for Papers</a></li>					
 					<li><a href="./schedule.html">Schedule</a></li>
 					<li><a href="./sponsors.html">Sponsors</a></li>
-                    <li><a href="./speakers.html">Speakers</a></li>
+                    <li><a class="active" href="./speakers.html">Speakers</a></li>
 					<!--
                     <li><a data-scroll href="#dates">Dates</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li-->
@@ -62,30 +61,51 @@
     </nav>
 
 
-    <section id="call-for-papers" class="section call-for-papers">
+    <section id="speakers" class="section speakers">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3 class="section-title">Call for Sponsors</h3>              
+                        <h2 class="section-title">Speakers</h2>						
                     </div>
                 </div>
-    
+				<hr>
                 <div class="row">
-                    <div class="col-md-12">
-                      <p>
-					  You are invited to support the Doctoral Symposium in Informatics Engineering 2018 (DSIE'18), organized by 
-					  the Doctoral Program in Informatics Engineering (ProDEI) at Faculty of Engineering of the University of Porto (FEUP).
-					  </p>
-					  <p>
-					  This is an ideal way to demonstrate your organization's commitment to the academic world, the corporate support is 
-					  typically used to allow a greater number of students to attend DSIE’18. Your support is very important to the symposium, 
-					  and the organization committee ensures that these contributions are well recognized. 
-					  <p>
-					  </p>
-					  If you are interested in sponsor this event please contact us at <a href="mailto:dsie2018@fe.up.pt?Subject=SponsorDSIE2018" target="_top">dsie2018@fe.up.pt</a>
-					  </p>
+                    <div class="col-md-6">
+						<img src="assets/images/speakers/speaker1.jpg" alt="speaker1">
+						<hr>
+						<h3 class="section-title"> 
+							Hugo Peixoto, PhD 
+							<a href="https://www.linkedin.com/in/hugoabpeixoto/"><i class="ion-social-linkedin-outline"></i></a>
+						</h3>
+						<p>
+						Talk: The Evolution of Information Systems in Healthcare: A Retrospective Review
+						</p>
+					</div>
+					<div class="col-md-6">
+						<p>
+						Hugo Peixoto is an IT Specialist in Centro Hospitalar do Tâmega e Sousa in Penafiel where he is also a Project Manager for the team of Drug and Complementary Diagnostic Exams Monitorization. He is an Invited Auxiliary Professor at the University of Minho in Portugal where he lectures on Knowledge Extraction and Electronic Health Records to Biomedical Engineering Masters Degree. From 2009 he is member of the research team of Information Systems Technologies in the Algoritmi Center in the University of Minho. He also took part in the organization of international workshops (FiCloud 2017), reviews of articles in international conferences and has member of the scientific committee of international conferences. He as 11 indexed papers in Scopus, 52 citations in scopus (h-index=4).
+						</p>						
                     </div>
-                </div>
+				</div>
+				<hr>
+				<div class="row">
+					<div class="col-md-6">
+						<img src="assets/images/speakers/speaker2.jpg" alt="speaker1">
+						<hr>
+						<h3 class="section-title"> 
+							Luís Paulo Reis, PhD 
+							<a href="https://www.linkedin.com/in/lpreis/"><i class="ion-social-linkedin-outline"></i></a>
+						</h3>
+						<p>	
+						Talk: High-Level Learning and Cooperation for Intelligent Robotic Teams
+						<p>
+					</div>
+					<div class="col-md-6">						
+						<p>
+						Luís Paulo Reis is an Associate Professor at the University of Minho in Portugal and Director of LIACC – Artificial Intelligence and Computer Science Laboratory where he also coordinates the Human-Machine Intelligent Cooperation Research Group. He is an IEEE Senior Member and vice-president of the Portuguese Association for Artificial Intelligence. During the last 25 years, he has lectured courses, at the University, on Artificial Intelligence, Intelligent Robotics, Multi-Agent Systems, Simulation and Modelling, Machine Learning, Educational/Serious Games and Computer Programming. He was the principal investigator of more than 10 research projects in those areas. He won more than 50 scientific awards including winning more than 15 RoboCup international competitions. He supervised 18 PhD and 101 MSc theses to completion. He organized more than 50 scientific events and belonged to the Program Committee of more than 250 scientific events. He is the author of more than 300 publications in international conferences and journals (indexed at SCOPUS or ISI Web of Knowledge)
+						</p>				
+					</div>				
+				</div>               
             </div>
         </section>
     <footer class="site-footer">
