--- a/cfp.html
+++ b/cfp.html
@@ -51,8 +51,8 @@
                     <!--li><a href="./cfs.html"> Call for Sponsors</a></li-->					
 					<li><a href="./schedule.html">Schedule</a></li>
 					<li><a href="./sponsors.html">Sponsors</a></li>
+                    <li><a href="./speakers.html">Speakers</a></li>
 					<!--
-                    <li><a data-scroll href="#speakers">Speakers</a></li> 
                     <li><a data-scroll href="#dates">Dates</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li-->
                     <li><a href="./venue.html">Venue</a></li> 
