--- a/venue.html
+++ b/venue.html
@@ -50,7 +50,8 @@
 					<!--li><a href="./cfs.html"> Call for Sponsors</a></li-->					
 					<li><a href="./schedule.html">Schedule</a></li>
 					<li><a href="./sponsors.html">Sponsors</a></li>
-					<!--li><a data-scroll href="#committees">Committees</a></li>
+                    <li><a href="./speakers.html">Speakers</a></li>
+					<!--
 					<li><a data-scroll href="#authors">Authors</a></li>
                     <li><a data-scroll href="#dates">Dates</a></li>
                     <li><a data-scroll href="#photos">Photos</a></li-->
