Req #21 update committees

--- a/authors.html
+++ b/authors.html
@@ -112,6 +112,7 @@
             <div class="col-md-4">
                 <h4>Senior Scientific Committee</h4><br>
                 <ul>
+					<li>Ali Shoker</li>
 					<li>Ana Paiva</li>
 					<li>Bruno Lima</li>
 					<li>Filipe Correia</li>
@@ -120,6 +121,7 @@
 					<li>João José Pinto Ferreira</li>
 					<li>João Mendes Moreira</li>
 					<li>João Pascoal Faria</li>
+					<li>José Maria Fernandes</li>
 					<li>Leonel Dias</li>
 					<li>Rosaldo Rossetti</li>
 					<li>Rui Maranhão</li>
